Eugene's check_in.html file commit. #WSL-24

--- a/src/main/webapp/WEB-INF/templates/sign_in.html
+++ b/src/main/webapp/WEB-INF/templates/sign_in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--SIGN IN PAGE-->
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org" >
   <head>
 	<head>
         <meta charset="utf-8">
