--- a/src/main/webapp/WEB-INF/templates/check_in.html
+++ b/src/main/webapp/WEB-INF/templates/check_in.html
@@ -30,12 +30,14 @@
 
       <form class="form-signin">
         <h2 class="form-signin-heading" align="middle">Зарегистрируйтесь</h2>
+          <label for="inputPassword" class="sr-only">Login</label>
+          <input type="text" id="inputPasswordRepeat" class="form-control" placeholder="введите логин" required>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
         <input type="password" id="inputPassword" class="form-control" placeholder="пароль" required>
-		<label for="inputPassword" class="sr-only">Repeat password</label>
-        <input type="password" id="inputPasswordRepeat" class="form-control" placeholder="повторите пароль" required>
+
+
         <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
       </form>
 
