--- a/src/main/webapp/WEB-INF/templates/check_in.html
+++ b/src/main/webapp/WEB-INF/templates/check_in.html
@@ -28,14 +28,14 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="post" action="/test/signup">
         <h2 class="form-signin-heading" align="middle">Зарегистрируйтесь</h2>
           <label for="inputPassword" class="sr-only">Login</label>
-          <input type="text" id="inputPasswordRepeat" class="form-control" placeholder="введите логин" required>
+          <input type="text" id="login" name="inputName" class="form-control" placeholder="введите логин" required>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="пароль" required>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль" required>
 
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
