--- a/src/main/webapp/WEB-INF/templates/create_group.html
+++ b/src/main/webapp/WEB-INF/templates/create_group.html
@@ -48,11 +48,17 @@
 
 <div class="container">
 
-    <form class="form-signin">
-        <h2 class="form-signin-heading" align="middle">Начните занимать очередь</h2>
-        <label for="groupName" class="sr-only">Group Name</label>
-        <input type="email" id="groupName" class="form-control" placeholder="Название группы" required autofocus>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Создать группу</button>
+    <form class="form-signin" method="post" action="/test/groups">
+        <h2 class="form-signin-heading" align="middle">Создайте новую группу</h2>
+        <label for="inputPassword" class="sr-only">Login</label>
+        <input type="text" id="login" name="inputName" class="form-control" placeholder="введите имя группы" required>
+        <label for="inputEmail" class="sr-only">Email address</label>
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
+        <label for="inputPassword" class="sr-only">Password</label>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль" required>
+
+
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
     </form>
 
 </div> <!-- /container -->
