--- a/src/main/webapp/WEB-INF/templates/sign_in.html
+++ b/src/main/webapp/WEB-INF/templates/sign_in.html
@@ -1,42 +1,40 @@
 <!DOCTYPE html>
 <!--SIGN IN PAGE-->
-<html lang="en"  xmlns:th="http://www.thymeleaf.org" >
-  <head>
-	<head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="../../resources/css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="../../resources/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="../../resources/css/main.css">
-		<link rel="stylesheet" href="../../resources/styles/signin.css">
+    <link rel="stylesheet" href="../../resources/css/bootstrap.min.css">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
+    <link rel="stylesheet" href="../../resources/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="../../resources/css/main.css">
+    <link rel="stylesheet" href="../../resources/styles/signin.css">
 
-        <script src="../../resources/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-  </head>
+    <script src="../../resources/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
 
-  <body>
+<body>
 
-    <div class="container">
+<div class="container">
 
-      <form class="form-signin">
+    <form class="form-signin" method="post" action="/test/signin">
         <h2 class="form-signin-heading" align="middle">Начните занимать очередь</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="пароль" required>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-      </form>
+    </form>
 
-    </div> <!-- /container -->
-  </body>
+</div> <!-- /container -->
+</body>
 </html>
