(Minor) Remapped /task/groups/ to /task/new_group so it becomes more self-descriptive #WSL-11

--- a/src/main/webapp/WEB-INF/templates/create_group.html
+++ b/src/main/webapp/WEB-INF/templates/create_group.html
@@ -48,7 +48,7 @@
 
 <div class="container">
 
-    <form class="form-signin" method="post" action="/test/groups">
+    <form class="form-signin" method="post" action="/test/new_group">
         <h2 class="form-signin-heading" align="middle">Создайте новую группу</h2>
         <label for="inputPassword" class="sr-only">Login</label>
         <input type="text" id="login" name="inputName" class="form-control" placeholder="введите имя группы" required>
