--- a/src/main/resources/templates/create_group.html
+++ b/src/main/resources/templates/create_group.html
@@ -1,34 +1,31 @@
-<!DOCTYPE html>
-<!--SIGN IN PAGE-->
-<html lang="en">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="../../resources/css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="../../resources/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="../../resources/css/main.css">
-        <link rel="stylesheet" href="../../resources/styles/signin.css">
-
-        <script src="../../resources/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            padding-top: 50px;
+            padding-bottom: 20px;
+        }
+    </style>
 </head>
 
 <body>
+
+<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+<link th:href="@{/css/bootstrap-theme.min.css}" rel="stylesheet">
+<link th:href="@{/css/main.css}" rel="stylesheet">
+<link th:href="@{/styles/signin.css}" rel="stylesheet">
+<script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -53,9 +50,11 @@
         <label for="inputPassword" class="sr-only">Login</label>
         <input type="text" id="login" name="inputName" class="form-control" placeholder="введите имя группы" required>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required autofocus>
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
+               autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль" required>
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль"
+               required>
 
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
