--- a/src/main/resources/templates/check_in.html
+++ b/src/main/resources/templates/check_in.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<!--CHECK IN PAGE-->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-    </head>
-</head>
-
-<body>
-
-<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-<link th:href="@{/css/bootstrap-theme.min.css}" rel="stylesheet">
-<link th:href="@{/css/main.css}" rel="stylesheet">
-<link th:href="@{/styles/signin.css}" rel="stylesheet">
-<script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
+<div th:replace="base :: header"></div>
 
 
 <div class="container">
