--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,52 +1,9 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-        body {
-            padding-top: 50px;
-            padding-bottom: 20px;
-        }
-    </style>
-
-</head>
-<body>
-
-<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
-<link th:href="@{/css/bootstrap-theme.min.css}" rel="stylesheet">
-<link th:href="@{/css/main.css}" rel="stylesheet">
-<link th:href="@{/styles/signin.css}" rel="stylesheet">
-<script th:src="@{/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js}"></script>
-
-<nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Who is last?</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Очереди</a></li>
-                <li><a href="#about">Группы</a></li>
-                <li><a href="#contact">Преподаватели</a></li>
-            </ul>
-        </div>
-    </div><!--/.nav-collapse -->
-</nav>
-
+<div th:replace="base :: header"></div>
 
 <div class="col-lg-5 col-md-5 col-sm-5" style="margin-top: 30px; margin-left: 50px ">
-    <table class="table ">
+    <table class="table table-striped ">
         <caption>Users</caption>
         <thead class="thread-dark">
         <tr>
