Changed actions in forms #WSL-11

--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -4,7 +4,7 @@
 
 <div class="container">
 
-    <form class="form-signin" method="post" action="/test/signup">
+    <form class="form-signin" method="post" action="/signup">
         <h2 class="form-signin-heading" align="middle">Зарегистрируйтесь</h2>
         <label for="inputPassword" class="sr-only">Login</label>
         <input type="text" id="login" name="inputName" class="form-control" placeholder="введите логин" required>
