--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -31,11 +31,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Who is last?</a>
+                <a class="navbar-brand" href="/all">Who is last?</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Очереди</a></li>
+                    <li ><a href="#queues">Очереди</a></li>
                     <li><a href="#about">Группы</a></li>
                     <li><a href="#contact">Преподаватели</a></li>
                 </ul>
