--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,26 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
 
 <div th:replace="base :: header"></div>
-
-<div class="container">
-
-    <div class="starter-template">
-        <h1>Иванов Иван Иванович</h1>
-        <!--/*@thymesVar id="msg" type=""*/-->
-        <h2 th:text="${msg}">
-            <!--<span th:text="'Message: ' + ${msg}"></span>-->
-            <!--p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p-->
-        </h2>
-
-    </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<div class="col-lg-5 col-md-5 col-sm-5" style="margin-top: 30px; margin-left: 50px ">
+    <h2 class="danger" th:text="${error}"></h2>
+    <table class="table table-striped ">
+        <caption>Users</caption>
+        <thead class="thread-dark">
+        <tr>
+            <th scope="col" align="center">#</th>
+            <th scope="col" align="center">Name</th>
+            <th scope="col" align="center">email</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--/*@thymesVar id="users" type="java"*/-->
+        <tr th:each="user, iter : ${users}" th:onclick="'window.location.href = \'' + @{/users/{id}(id=${user.userId})} + '\''">
+            <td th:text="${user.userId}" >1</td>
+            <td th:text="${user.name}" >1</td>
+            <td th:text="${user.email}" >1</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
-</body>
 </html>
