--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -3,7 +3,7 @@
 
 <div class="container">
 
-    <form class="form-signin" method="post" action="/test/signin">
+    <form class="form-signin" method="post" action="/signin">
         <h2 class="form-signin-heading" align="middle">Начните занимать очередь</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
