added links to new web-pages #WSL-40

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -35,8 +35,8 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li ><a href="#queues">Очереди</a></li>
-                    <li><a href="#about">Группы</a></li>
+                    <li ><a href="/join_the_queue">Очереди</a></li>
+                    <li><a href="/add_user_to_group">Группы</a></li>
                     <li><a href="#contact">Преподаватели</a></li>
                 </ul>
             </div>
