--- a/src/main/resources/templates/create_group.html
+++ b/src/main/resources/templates/create_group.html
@@ -15,9 +15,8 @@
                required>
 
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Зарегистрироваться</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Создать группу</button>
     </form>
 
 </div> <!-- /container -->
-</body>
 </html>
