--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -3,13 +3,18 @@
 
 <div class="container">
 
+
     <form class="form-signin" method="post" action="/signin">
+
         <h2 class="form-signin-heading" align="middle">Начните занимать очередь</h2>
+        <div class="alert alert-danger" role="alert" th:if="${error != null}" th:text="${error}">
+            <!--/*@thymesVar id="error" type="aj"*/-->
+        </div>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
+        <input type="email" id="inputEmail" name="username" class="form-control" placeholder="e-mail адрес" required
                autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль"
+        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="пароль"
                required>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
     </form>
