--- a/src/main/resources/templates/create_group.html
+++ b/src/main/resources/templates/create_group.html
@@ -5,15 +5,8 @@
 
     <form class="form-signin" method="post" action="/new_group">
         <h2 class="form-signin-heading" align="middle">Создайте новую группу</h2>
-        <label for="inputPassword" class="sr-only">Login</label>
-        <input type="text" id="login" name="inputName" class="form-control" placeholder="введите имя группы" required>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
-               autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="пароль"
-               required>
-
+        <label for="inputName" class="sr-only">Login</label>
+        <input type="text" id="inputName" name="inputName" class="form-control" placeholder="введите имя группы" required>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Создать группу</button>
     </form>
