--- a/src/main/resources/templates/add_user_to_group.html
+++ b/src/main/resources/templates/add_user_to_group.html
@@ -1,15 +1,19 @@
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
+
 <div th:replace="base :: header"></div>
 
-<div class="container" style="margin-top: 30px">
+<script th:src="@{/js/vendor/adding_users.js}"></script>
+
+<div align="center" class="container">
     <h2 class="danger" th:text="${error}"></h2>
-    <!--/*@thymesVar id="users" type="java"*/-->
-        <form class="form-signin" method="post" action="/users/save">
-            <h2 class="form-signin-heading" align="middle">Добавьте пользователя в группу</h2>
-            <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
-                   autofocus>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Добавить</button>
-        </form>
+    <form id="inserting_form">
+        <h2 class="form-heading" align="middle">Добавьте пользователей в очередь</h2>
+        <button class="btn btn-success btn-sm" onclick="return addline();">Добавить нового</button>
+        <div align="center" class="form-inline">
+            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="email">
+            <button class="btn btn-danger btn-sm">Удалить</button>
+        </div>
+        <button id="button" type="submit" class="btn btn-lg btn-primary">Добавить</button>
+    </form>
 </div>
 </html>
