--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -30,11 +30,12 @@
     <nav class="navbar navbar-inverse  navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Who Is Last?</a>
+                <a class="navbar-brand" href="/home_page">Who Is Last?</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span> Очереди</a></li>
-                <li><a href="/add_user_to_group"><span class="glyphicon glyphicon-home"></span> Группы</a></li>
+                <li><a href="/create_queue"><span class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
+                <li><a href="/add_user_to_group"><span class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
                 <li><a href="/new_group"><span class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
