--- a/src/main/resources/templates/join_the_queue.html
+++ b/src/main/resources/templates/join_the_queue.html
@@ -2,14 +2,37 @@
 <div th:replace="base :: header"></div>
 
 <div class="container" style="margin-top: 30px">
-    <h2 class="danger" th:text="${error}"></h2>
-    <!--/*@thymesVar id="users" type="java"*/-->
-    <form class="form-signin" method="post" action="/users/save">
-        <h2 class="form-signin-heading" align="middle">Встаньте в очередь</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="e-mail адрес" required
-               autofocus>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Встать</button>
-    </form>
+    <table align="center" width="1000" border="1" class="table" style="margin-top: 40px">
+        <thead class="thread-dark">
+        <tr bgcolor="#6495ed">
+            <th scope="col" align="center">#</th>
+            <th scope="col" align="center">Мои очереди</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!--/*@thymesVar id="partyQueues" type="java"*/-->
+        <tr th:each="queue, iter : ${partyQueues}"
+            th:onclick="'window.location.href = \'' + @{/queue?id={id}(id=${queue.queueId})} + '\''">
+            <td th:text="${iter.count}">1</td>
+            <td th:text="${queue.queueName}">1</td>
+        </tr>
+        </tbody>
+    </table>
+
+        <table align="center" width="1000" border="1" class="table">
+
+            <thead class="thread-dark">
+            <tr bgcolor="#6495ed">
+                <th scope="col" align="center" style="po">Доступные очереди</th>
+            </tr>
+            </thead>
+            <tbody>
+            <!--/*@thymesVar id="userQueues" type="java"*/-->
+            <tr th:each="queue, iter : ${userQueues}"
+                th:onclick="'window.location.href = \'' + @{/queue?id={id}(id=${queue.queueId})} + '\''">
+                <td th:if="${queue.queueName != null}" th:text="${queue.queueName}">1</td>
+            </tr>
+            </tbody>
+
 </div>
 </html>
