Added restrictions so only superusers are allowed to create queues, added group name and queue name to group and queue pages respectively  #WSL-52

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -35,6 +35,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span> Очереди</a></li>
                 <li><a href="/create_queue"><span class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
+                <li><a href="/groupmates"><span class="glyphicon glyphicon-home"></span> Моя группа</a></li>
                 <li><a href="/add_user_to_group"><span class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
                 <li><a href="/new_group"><span class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
             </ul>
