Fix: typo in field name

--- a/src/main/resources/templates/user_home.html
+++ b/src/main/resources/templates/user_home.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td bgcolor="#6495ed">
-                <label>Группа:</label>
+                <label>Почта:</label>
             </td>
             <td th:if="${email != null}" th:text="${email}">1</td>
         </tr>
