--- a/src/main/resources/templates/user_home.html
+++ b/src/main/resources/templates/user_home.html
@@ -30,7 +30,7 @@
             <td th:if="${userGroup != null}" th:text="${userGroup}">1</td>
         </tr>
     </table>
-    <div class="alert alert-danger" role="alert" th:if="${msg} != null" th:text="${msg}" style="margin-top: 30px">
+    <div class="alert alert-dark" role="alert" th:if="${msg} != null" th:text="${msg}" style="margin-top: 30px">
         <!--/*@thymesVar id="error" type="aj"*/-->
     </div>
     <table align="center" width="1000" border="1" class="table" style="margin-top: 40px" th:if="${partyQueues}">
@@ -52,7 +52,7 @@
 
             <thead class="thread-dark">
             <tr bgcolor="#6495ed">
-                <th scope="col" align="center" style="po">Доступные очереди</th>
+                <th scope="col" align="center">Доступные очереди</th>
             </tr>
             </thead>
             <tbody>
