--- a/src/main/resources/templates/start_page.html
+++ b/src/main/resources/templates/start_page.html
@@ -3,17 +3,20 @@
 
 
 <div class="container">
-    <h1 class="form-signin-heading" align="middle">Добро пожаловать!</h1>
-    <h2 class="form-signin-heading" align="middle">Вы находитесь на сервисе для создания очередей</h2>
+    <h1 align="middle">Добро пожаловать!</h1>
+    <h2 align="middle">Вы находитесь на сервисе для создания очередей</h2>
 
-    <form class="form-signin" action="/signup">
-        <button type="submit" class="btn btn-primary btn-lg">Зарегистрироваться</button>
+    <form action="/signup">
+        <div align="center">
+            <button type="submit" class="btn btn-primary btn-lg">Зарегистрироваться</button>
+        </div>
     </form>
 
-    <form class="form-signin" action="/signin">
-        <button type="submit" class="btn btn-primary btn-lg">Войти</button>
+    <form action="/signin">
+        <div align="center">
+            <button type="submit" class="btn btn-primary btn-lg">Войти</button>
+        </div>
     </form>
-
 </div>
 </body>
 </html>
