--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -33,16 +33,16 @@
                 <a class="navbar-brand" href="/home_page">Who Is Last?</a>
             </div>
             <ul class="nav navbar-nav">
-                <li><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span> Очереди</a></li>
-                <li><a href="/create_queue"><span class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
-                <li><a href="/groupmates"><span class="glyphicon glyphicon-home"></span> Моя группа</a></li>
-                <li><a href="/add_user_to_group"><span class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
-                <li><a href="/new_group"><span class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
+                <li th:if="${logged}" ><a href="/join_the_queue"><span class="glyphicon glyphicon-list"></span> Очереди</a></li>
+                <li th:if="${logged == true and superuser == true}"><a href="/create_queue"><span class="glyphicon glyphicon-list"></span> Создать очередь</a></li>
+                <li th:if="${logged}"><a href="/groupmates"><span class="glyphicon glyphicon-home"></span> Моя группа</a></li>
+                <li th:if="${logged == true and superuser == true}"><a href="/add_user_to_group"><span class="glyphicon glyphicon-plus"></span> Добавить в группу</a></li>
+                <li th:if="${logged == true and superuser == false}"><a href="/new_group"><span class="glyphicon glyphicon-plus"></span> Создать группу</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                <li><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                <li th:if="${logged == false}"><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li th:if="${logged == false}"><a href="/signin"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li th:if="${logged}"><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
             </ul>
         </div>
     </nav>
