--- a/src/main/resources/templates/sign_in.html
+++ b/src/main/resources/templates/sign_in.html
@@ -10,6 +10,9 @@
         <div class="alert alert-danger" role="alert" th:if="${error != null}" th:text="${error}">
             <!--/*@thymesVar id="error" type="aj"*/-->
         </div>
+        <div class="alert alert-info" role="alert" th:if="${notification} != null" th:text="${notification}">
+            <!--/*@thymesVar id="notification" type="aj"*/-->
+        </div>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" name="username" class="form-control" placeholder="e-mail адрес" required
                autofocus>
