--- a/src/main/resources/templates/groupmates.html
+++ b/src/main/resources/templates/groupmates.html
@@ -2,39 +2,52 @@
 
 <div th:replace="base :: header"></div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<div class="col-lg-5 col-md-5 col-sm-5" style="margin-top: 30px; margin-left: 50px ">
-
-    <h1>
+<div  class="container" style="margin-top: 30px; margin-left: 50px ">
+    <h1 align = "center">
         <span>Моя группа:</span>
-        <small th:text="${groupName}" ></small>
+        <small th:text="${groupName}"></small>
     </h1>
     <div class="info" role="alert" th:if="${queueName} != null">
         <h2>
             <span>Очередь:</span>
-            <small th:text="${queueName}" ></small>
+            <small th:text="${queueName}"></small>
         </h2>
     </div>
+
     <div class="alert  alert-info" role="alert" th:if="${error} != null" th:text="${error}">
         <!--/*@thymesVar id="error" type="aj"*/-->
     </div>
-    <table class="table table-striped " th:if="${error} == null">
+
+    <table align="center" width="500" border="0" class="table table-striped" th:if="${error} == null">
         <!--/*@thymesVar id="error" type="aj"*/-->
-        <caption>Ваши одногруппники</caption>
-        <thead class="thread-dark">
+        <tr>
+            <td align="center" class=bg-primary" colspan="3">
+                <label><font color="black">Ваши одногруппники</font></label>
+            </td>
+        </tr>
+
         <tr>
             <th scope="col" align="center">#</th>
             <th scope="col" align="center">Имя</th>
             <th scope="col" align="center">E-mail</th>
         </tr>
-        </thead>
+
         <tbody>
         <!--/*@thymesVar id="users" type="java"*/-->
         <tr th:each="user, iter : ${users}">
-            <td th:text="${iter.count}" >1</td>
-            <td th:text="${user.name}" >1</td>
-            <td th:text="${user.email}" >1</td>
+            <td th:text="${iter.count}">1</td>
+            <td th:text="${user.name}">1</td>
+            <td th:text="${user.email}">1</td>
         </tr>
         </tbody>
     </table>
+    <div align="center">
+        <form method="" action="">
+            <button style="margin-top: 50px" id="" type="submit"
+                    class="btn btn-lg btn-danger">
+                Покинуть группу
+            </button>
+        </form>
+    </div>
 </div>
 </html>
